# streaming-drf-test

./: README.md  pyproject.toml
scripts/: postgres-run.sh
src/src/: settings.py  urls.py
src/tripper/: apps.py  models.py  urls.py  views.py
src/tripper/migrations/: 0001_initial.py
