[tool.poetry]
name = "eternal-pkgs"
version = "0.1.0"
description = ""
authors = ["Makson"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.4"
djangorestframework = "^3.14.0"
pillow = "^10.0.0"
aiohttp = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
